--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -539,6 +539,12 @@ main {
   margin-right: 5px;
   color: #ff9155;
 }
+
+.switch-label svg {
+  color: #ff9155;
+  font-size: 15px;
+  margin-right: 10px;
+}
 /******************************************************************/
 /******************************** Tabs ****************************/
 /******************************************************************/ 
