--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -255,17 +255,13 @@ main {
 /******************* Home Page - Intro Block **********************/
 /******************************************************************/ 
 
-.intro-container {
+main {
+  position: relative;
   width: 100vw;
   min-height: 100vh;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 200px;
 }
 
-.intro-container > img {
+main > img {
   display: block;
   width: 100vw;
   height: 100vh;
@@ -276,7 +272,7 @@ main {
   z-index: 0;
 }
 
-.intro-container > .overlay {
+main > .overlay {
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,0.2);
@@ -286,10 +282,19 @@ main {
   z-index: 1;
 }
 
+.intro-container {
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 200px;
+}
+
 .intro-container .intro-content {
   width: 100%;
   height: 100%;
-  padding: 150px 5%;
+  padding: 150px 10%;
   text-align: center;
   position: absolute;
   top: 0;
@@ -318,6 +323,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 40px;
 }
 
 .intro-container .intro-actions  button {
@@ -531,12 +537,13 @@ main {
 }
 
 .switch-label {
-  font-size: 15px;
+  font-size: 17px;
 }
 
 .switch-label > span {
   font-size: 12px;
   margin-right: 5px;
+  font-weight: bold;
   color: #ff9155;
 }
 
@@ -545,57 +552,84 @@ main {
   font-size: 15px;
   margin-right: 10px;
 }
+
+
 /******************************************************************/
-/******************************** Tabs ****************************/
+/**************************** Register ****************************/
 /******************************************************************/ 
 
-.intro-tabs {
-	width: 80%;
-  margin: 40px auto;
-  border-radius: 20px;
-  color: #fff;
+.register-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  padding-top: 80px;
 }
 
-.category-content {
-  padding: 20px;
+.register-content {
+  width: 40%;
+  padding: 40px;
+  background-color: #21172488 !important;
+  color: #fff !important;
+  margin-bottom: 25px;
+  box-shadow: 0 5px 15px rgb(0 0 0 / 20%) !important;
+  border-radius: 20px !important;
+}
+
+.register-content h3 {
+  color: #fff;
+  font-size: 2.2rem;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  margin-bottom: 40px;
   text-align: center;
 }
 
-.category-content img {
+.register-content input {
   width: 100%;
-  margin-bottom: 15px;
+  background: hsla(0,0%,100%,0.1);
+  color: #fff;
+  padding: 15px;
+  box-shadow: 0 5px 8px 0 rgb(0 0 0 / 42%);
+  box-sizing: border-box;
+  border-radius: 7px;
+  border: 1px solid transparent;
+  outline: 0;
+  transition-duration: .4s;
+  font-weight: 400;
+  font-size: 14px;
+  margin-bottom: 20px;
 }
 
-.category-content h3 a {
+.register-content button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  margin: 20px auto 0;
+  padding: 10px 20px;
+  text-align: center;
+  background-color: transparent;
+  border: 1px solid #ff9155;
+  transition: all 0.5s;
+  color: #fff;
+  cursor: pointer;
   font-size: 1rem;
-  color: white;
+  border-radius: 10px;
+  box-shadow: 0 10px 8px -5px rgb(0 0 0 / 20%);
 }
 
-.rec-arrow {
-  font-size: 14px !important;
-  line-height: 40px !important;
-  min-width: 40px !important;
-  width: 40px !important;
-  height: 40px !important;
-  background-color: rgba(255, 187, 0, 0.1) !important;
-  
+.register-content button svg {
+  color: #fff;
+  margin-right: 15px;
 }
 
-.rec-arrow:hover:enabled {
-  background-color: rgb(196, 163, 75, 1) !important;
-}
-
-.ejXxNI {
-  background-color: rgba(255, 187, 0, 0.1) !important;
-  box-shadow:  0 1px 3px rgb(196, 163, 75)   !important;
-}
-
-.ejXxNI:enabled {
-  background-color: rgba(255, 187, 0, 1) !important;
-}
-
-.ejXxNI:hover:enabled {
-  background-color: rgba(255, 187, 0, 1) !important;
+.register-content button:hover {
+  background-color: #ff9155;
 }
 
 /******************************************************************/
@@ -1023,7 +1057,7 @@ footer > p {
   position: absolute;
   top: 0;
   left: 0;
-  background: transparent;
+  background: rgba(0,0,0,0.2);
 }
 
 .loading-module img {
@@ -1039,10 +1073,12 @@ footer > p {
 }
 
 .alert {
-  padding: 1rem;
+  padding: 0.5rem;
   margin: 2rem;
   border: 0.1rem solid transparent;
   border-radius: 0.5rem;
+  font-size: 12px;
+  text-align: center;
 }
 
 .alert-info {
